--- a/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CloudBackup.apk/res/values-ro/strings.xml
@@ -22,6 +22,8 @@
     <string name="button_cancel">Anulaţi</string>
     <string name="button_delete">Ștergeţi</string>
     <string name="button_next">Înainte</string>
+    <string name="can_not_backup_in_lite_mode">"Nu se poate crea copia de rezerva în modul Lite"</string>
+    <string name="can_not_restore_in_lite_mode">"Nu se poate restaura în modul Lite"</string>
     <string name="cancel_recover_settings"><u>Anulaţi</u></string>
     <string name="click_try_to_restore_again">Apăsaţi pentru a încerca din nou</string>
     <string name="cloud_app_backup_success">Crearea copiei de rezervă a fost finalizată</string>
@@ -97,8 +99,6 @@ Notă: Datele aplicațiilor instalate nu vor fi salvate în Mi Cloud!"</string>
     <string name="open_wifi_description">Conectaţi-vă la o rețea Wi-Fi pentru a restabili aplicațiile</string>
     <string name="open_wifi_setting">Setări Wi-Fi</string>
     <string name="process_whole_recovery">Restabilire \"%s\"</string>
-    <string name="provision_arrow_back">&lt;</string>
-    <string name="provision_arrow_next">&gt;</string>
     <string name="query_restore_back_view">Copie de rezervă Mi Cloud</string>
     <string name="query_restore_description">Restaurați aplicațiile și setările ecranului de pornire utilizând această copie de rezervă. Această operațiune va suprascrie datele aplicațiilor deja instalate pe dispozitiv. Aplicațiile neincluse în această copie de rezervă vor fi mutate pe ultima pagină din ecranul principal.</string>
     <string name="query_restore_summary">A fost găsită o copie de rezervă Mi Cloud pentru acest dispozitiv. Restaurați aplicațiile și setările din ecranul principal sau utilizați ca dispozitiv nou și ștergeți copiile de rezervă anterioare din Mi Cloud?</string>
