--- a/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
@@ -521,7 +521,7 @@ Pentru a vă activa contul, accesați
     <string name="tab_loading">&lt;CDATA&gt;...&lt;/CDATA&gt;</string>
     <string name="temp_play_history_button_label">Afişaţi istoricul redărilor</string>
     <string name="tencent">Tencent</string>
-  <string name="tencent_shortcut_name">Dragoste melc</string>
+  <string name="tencent_shortcut_name">2 de aspirație</string>
     <string name="to_be_play_label_v5">"Următorul: "</string>
     <string name="toast_back_key_pressed_notice">Pentru a ieşi, apăsaţi Înapoi din nou</string>
     <string name="toast_message_continue_play_from">"Redare de la "</string>
