--- a/Romanian/main/PersonalAssistant.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PersonalAssistant.apk/res/values-ro/strings.xml
@@ -5,7 +5,7 @@
     <string name="account_address">Adresă</string>
     <string name="address_name_spell">Introduceți adresa</string>
     <string name="adjustment_order">Schimbați ordinea</string>
-  <string name="alipay_scan">mătura</string>
+    <string name="alipay_scan">Scaner</string>
     <string name="app_label">Asistent inteligent</string>
     <string name="apps">Recomandări aplicații</string>
     <string name="apps_label">Aplicații</string>
@@ -15,10 +15,10 @@
   <string name="bicycle">Ciclu</string>
     <string name="calc_currency">Rata de schimb</string>
     <string name="calc_name">Calculator științific</string>
-  <string name="calc_num">numerale</string>
-  <string name="calc_parent">calculator</string>
-  <string name="calendar_name">Program nou</string>
-  <string name="calendar_parent">calendar</string>
+    <string name="calc_num">Simboluri financiare</string>
+    <string name="calc_parent">Calculator</string>
+    <string name="calendar_name">Adăugați un eveniment</string>
+    <string name="calendar_parent">Calendar</string>
     <string name="card_settings">Setări card</string>
     <string name="card_settings_rule">Setări comenzi card</string>
     <string name="check_network">Verificați setările de rețea</string>
@@ -28,7 +28,7 @@
     <string name="city_name_spell">Introduceți numele orașului</string>
     <string name="clear">Goliți</string>
     <string name="closed">Închis</string>
-    <string name="commute">Destinații</string>
+    <string name="commute">Sugestii destinații</string>
     <string name="commute_open">Arată cardul pentru destinațiile sugerate</string>
     <string name="commute_setting_brief">Obțineți ruta și sugestiile de trafic înainte de a pleca.</string>
     <string name="company_or_school">Muncă sau școală</string>
@@ -44,8 +44,11 @@
     <string name="data_error">Ne pare rău, serviciul este indisponibil momentan. Vă rugăm să încercați din nou mai târziu</string>
     <string name="data_error_show">"Comanda este finalizată, nu se pot afișa detalii"</string>
     <string name="drive">Conduceți</string>
+  <string name="duokan_open">Citire deschis pentru a vedea mai multe carduri</string>
+  <string name="duokan_reading">Citește mai mult pentru a vedea</string>
+    <string name="duokan_setting_brief">Reluați lectura de unde ați rămas.</string>
     <string name="entrance">Scurtături card</string>
-    <string name="exercise_setting_brief">Vedeți starea activităților.</string>
+    <string name="exercise_setting_brief">Vedeți starea activităților(Permiteți pornirea automată pentru Mi Fit din Securitate).</string>
     <string name="express">Livrare express</string>
     <string name="express_jd">JD</string>
     <string name="express_mi_shop">Magazinul de aplicații Mi</string>
@@ -56,7 +59,7 @@
     <string name="express_taobao">Taobao</string>
     <string name="express_tmall">Tmall</string>
     <string name="flow_open">Arată cardul pentru date mobile</string>
-    <string name="flow_setting_brief">Gestionați traficul de date mobile.</string>
+    <string name="flow_setting_brief">Gestionați traficul de date mobile(Adăugați planul de date în Securitate>Utilizare date).</string>
     <string name="focus">Urmărește starea</string>
     <string name="focus_on_dynamic">Urmărește starea</string>
     <string name="go_to_school">De la sau spre școală/servici</string>
@@ -82,7 +85,7 @@
     <string name="launch_order_change">Modificați ordinea</string>
     <string name="launch_order_finish">Terminat</string>
     <string name="launch_top">Includeți aplicații sugerate sau personalizați această caracteristică.</string>
-  <string name="launcher_else">alte</string>
+    <string name="launcher_else">Altele</string>
     <string name="locating_fail">"Nu s-a putut obține locația"</string>
     <string name="locations">Locaţii frecventate</string>
     <string name="locations_preferences">Locații și preferințe frecvente</string>
@@ -108,6 +111,7 @@
     <string name="navigation_network_location_not_enabled_title">Vă rugăm să activați serviciile de localizare</string>
     <string name="navigation_search_automatically_positioned_city">Obțineți informații despre oraș utilizând locația curentă</string>
     <string name="navigation_search_current_city">Orașul actual:</string>
+    <string name="navigation_search_default_hint">Căutați elementele aici</string>
     <string name="navigation_search_no_city_list">Niciun oraș aici</string>
     <string name="navigation_search_positioning">Obținere localizare…</string>
     <string name="navigation_search_positioning_failed">"Nu s-a putut obține locația, puteți selecta manual orașul"</string>
@@ -122,39 +126,38 @@
     <string name="not_install_c3">Descărcați</string>
     <string name="not_install_c4">Nu, mulțumesc</string>
     <string name="not_installed">Nu este instalată</string>
-  <string name="note_name">note noi</string>
-  <string name="note_parent">notițe</string>
+    <string name="note_name">Creați o notă nouă</string>
+    <string name="note_parent">Notițe</string>
     <string name="notification_express_app_open">Activați</string>
     <string name="notification_express_content">Urmăriți comenzile utilizând Asistentul inteligent</string>
     <string name="notification_express_title">Activați cardurile pentru aplicațiile de cumpărături</string>
     <string name="opened">Activați</string>
-  <string name="paycode_parent">Alipay</string>
+    <string name="paycode_parent">Alipay</string>
     <string name="place_label">Locaţii frecventate</string>
     <string name="preferences">Preferinţe</string>
     <string name="preferences_label">Preferinţe</string>
-  <string name="qq_new">Noul talk</string>
-  <string name="qq_qzone">QQ spațiu</string>
+    <string name="qq_new">Stare nouă</string>
+    <string name="qq_qzone">Qzone</string>
     <string name="quickstart_label">Caracteristici</string>
-    <string name="reading_setting_brief">Reluați cititul de unde ați rămas.</string>
-  <string name="record_name">începeţi înregistrarea</string>
-  <string name="record_parent">recorder</string>
+    <string name="record_name">Porniți înregistrarea</string>
+    <string name="record_parent">Înregistrare</string>
     <string name="remain_flow">Date mobile</string>
     <string name="req_no_data">"Nu s-au putut obține informațiile"</string>
     <string name="req_no_sdata">"Nu s-au putut găsi rezultate"</string>
     <string name="retry">Reîncercați</string>
     <string name="scan">Scanați</string>
-  <string name="scan_card">Verificarea minuțioasă carte de vizită</string>
-  <string name="scan_code">codul de scanare</string>
-  <string name="scan_doc">matura de documente</string>
-  <string name="scan_exercise">Denumirea matura</string>
-  <string name="scan_parent">mătura</string>
-  <string name="scan_trans">traducere</string>
+    <string name="scan_card">Card business</string>
+    <string name="scan_code">Cod  QR</string>
+    <string name="scan_doc">Document</string>
+    <string name="scan_exercise">Studiu</string>
+    <string name="scan_parent">Scaner</string>
+    <string name="scan_trans">Traducere</string>
     <string name="service_unavailiable">Verificați conexiunea la rețea și reîncercați</string>
     <string name="setting_address">Adăugați locații frecventate</string>
     <string name="setting_dialog_cancel">Renunțați</string>
     <string name="setting_dialog_quit">Ieșiți</string>
     <string name="setting_dialog_title">Toate modificările se vor pierde. Sunteți sigur că doriți să ieșiți acum?</string>
-  <string name="setting_disable">nu a fost încă disponibil</string>
+    <string name="setting_disable">Indisponibil</string>
     <string name="setting_home_label">Setați adresa de acasă</string>
     <string name="setting_launch_change">Schimbați</string>
     <string name="setting_place">Configurați locațiile frecventate pentru a vedea traficul și sugestii despre rute</string>
@@ -172,14 +175,14 @@
     <string name="understandassistant">Despre Asistentul inteligent</string>
     <string name="uploads_disabled">"Nu s-au putut încărca fișierele"</string>
     <string name="walk">Mers</string>
-  <string name="weibo_name">noua microblogging</string>
-  <string name="weibo_parent">Weibo</string>
+    <string name="weibo_name">Postare nouă</string>
+    <string name="weibo_parent">Weibo</string>
     <string name="which_transport">Cu ce ajungeți în mod obișnuit la destinație?</string>
-  <string name="wx_aa">reuniuni AA</string>
-  <string name="wx_collectioncode">codul Creanțele</string>
-  <string name="wx_name">Cartea mea de vizită</string>
-  <string name="wx_parent">WeChat</string>
-  <string name="wx_paycode">Codul de plată</string>
-  <string name="wx_scan">mătura</string>
-  <string name="wx_timeline">Cercul de prieteni</string>
+  <string name="wx_aa">Go Dutch</string>
+    <string name="wx_collectioncode">Primiți bani</string>
+    <string name="wx_name">Cardul meu</string>
+    <string name="wx_parent">WeChat</string>
+    <string name="wx_paycode">Plată</string>
+    <string name="wx_scan">Scaner</string>
+    <string name="wx_timeline">Momente</string>
 </resources>
