--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -28,6 +28,8 @@
     <string name="ads_install_num"/>
     <string name="ads_score_title"/>
     <string name="alert_warning">Avertizări meteo</string>
+    <string name="already_voted">A fost votat</string>
+    <string name="already_voted_toast">Ați selectat deja astăzi</string>
     <string name="app_name">Meteo</string>
     <string name="aqi_data_source">Oferit de Caiyun Weather</string>
     <string name="aqi_desc">Indicele de Calitate a Aerului</string>
@@ -55,6 +57,7 @@
     <string name="button_exit">Ieşire</string>
     <string name="button_not_allow">Renunţaţi</string>
     <string name="button_sure_abandon">Renunțați la modificări?</string>
+    <string name="card_vote_item_vs">VS</string>
     <string name="change_alert">Verificați conexiunea la rețea și reîncercați</string>
     <string name="commercial">Reclamă</string>
     <string name="common_loading_text">Doar o secundă…</string>
@@ -68,10 +71,11 @@
     <string name="daily_forcast_weather_transfer">%1$s. %2$s mai târziu.</string>
     <string name="daily_forcast_whirl_wind">Tornadă</string>
     <string name="daily_forcast_wind_connect">%1$s|%2$s</string>
+    <string name="daily_forecast_detail">Detalii prognoză</string>
     <string name="daily_forecast_detail_date">dd.MM</string>
  
     <string name="edit_alert_city_title">Gestionați alertele</string>
-    <string name="edit_city">Editaţi</string>
+    <string name="edit_city">Editaţi localitatea</string>
     <string name="empty">" "</string>
     <string name="first_start_network_msg">Această aplicație trebuie să se conecteze la internet și să acceseze locația dvs. pentru a funcţiona in mod normal.</string>
     <string name="first_start_network_title">Conexiune la internet și acces la locație</string>
@@ -117,6 +121,7 @@
 Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</string>
     <string name="location_management">Locaţii</string>
     <string name="location_tag">Localizare GPS</string>
+    <string name="lunar_calendar"/>
     <string name="menu_add_city">Editați locațiile</string>
     <string name="menu_location">Locaţii</string>
     <string name="mi_pad2">latte</string>
@@ -125,6 +130,8 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="network_unavailable">"Nu se poate conecta la rețea."</string>
     <string name="no_data">--</string>
     <string name="no_network_btn">Reîncercați</string>
+    <string name="no_vote_num">%1$spersoane | </string>
+  <string name="no_vote_ratio">contra %1$s%%</string>
     <string name="open">Deschideți</string>
     <string name="open_browser">Deschideți în browser</string>
     <string name="pressure_connect">%1$s mb</string>
@@ -159,6 +166,7 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="top_pollution_pm10">PM10</string>
     <string name="top_pollution_pm25">PM2.5</string>
     <string name="top_pollution_so2">SO2</string>
+    <string name="total_voted_num_text">"&lt;font color='#20a7ff'&gt;%1$s&lt;/font&gt; persoane au votat"</string>
     <string name="traffic_control_daty_after_tomorrow_numbers">Poimâine: %1$s</string>
     <string name="traffic_control_today_numbers">Astăzi: %1$s</string>
     <string name="traffic_control_tomorrow_numbers">Mâine: %1$s</string>
@@ -185,4 +193,6 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="weather_alert">Atenționări meteo</string>
     <string name="wind_miles_unit">%1$s mph</string>
     <string name="wind_unit">%1$s km/h</string>
+    <string name="yes_vote_num"> | %1$spersoane</string>
+    <string name="yes_vote_ratio">pro %1$s%%</string>
 </resources>
